# tvtrader

./: .gitignore  .gitmodules  .pylintrc  LICENSE  README.md  docker-compose.yml  mypy.ini
.github/workflows/: sonarcloud.yml
agents/: .gitignore  Makefile  README.md  __main__.py  __version__.py  pylint.toml  pyproject.toml  setup.py
agents/distributor/: .gitignore  requirements.txt
agents/distributor/src/: distributor.py
agents/scripts/: start_rabbit.sh
agents/targets/: __init__.py  base.py  console.py
agents/tvt_agents/: __main__.py  connector.py  distributor.py  exception.py
agents/tvt_agents/distributor/: __init__.py  base.py  exceptions.py
agents/tvt_agents/distributor/logutil/: __init__.py
agents/tvt_agents/distributor/source/: __init__.py  websocket.py
agents/tvt_agents/examples/: __init__.py  threaded_target.py
backend/: .gitignore  README.md  bandit-config.yaml  pyvenv.cfg  requirements-prod.txt  requirements-sanic-22.6-dev.txt  requirements-sanic-22.9-dev.txt  requirements.txt  start.sh
backend/Scripts/: activate  activate.bat
backend/src/: config.py  server.py
backend/src/actions/: carbon.py  websocket.py
backend/src/app/: context.py  helpers.py
backend/src/models/: alerts.py  responses.py
backend/src/models/responses/: __init__.py  apidoc.py
backend/src/responses/: JsonResponse.py
backend/src/schemas/: alerts.py  response_error.py  response_success.py  responses.py
backend/src/tests/: basics.restbook  healthcheck.http
backend/src/views/: Home.py
backend/tests/: basics.restbook  genjsondata.py  post.http  post_carbon.http  pytest.ini  test_health.py
backend/tests/features/: healthcheck.feature
backend/tests/features/alerts/: invalid_alerts.feature  valid_alerts.feature
backend/tests/lib/: common_functions.py  common_steps.py  fixtures.py
backend/tests/lib/schemas/: alerts.py
backend/tests/step_defs/: test_health.py  test_steps.py
doc/: alert_log_widget.html  alertformat.md  backend_openapi_doc.json  sample_dashboard.json
frontend/: README.md  example_data.json  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AlertLegends.vue  AlertTable.vue  AlertView.vue  NavBar.vue
frontend/src/plugins/: axios.js  localstorage.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: AlertView.vue  HomeView.vue  SettingsView.vue  SettingsViewNative.vue
frontend/tests/e2e/plugins/: index.js
scripts/: TradingView-Alert-scarper.tampermonkey.js  TradingView-Remove-ads.tampermonkey.js
