[tool.poetry]
name = "tvt_agents"
version = "0.1.0-a797860"
description = "Agents for the TvTrader suite"
authors = ["Zoltan Fabian <zoltan.dzooli.fabian@gmail.com>"]
readme = "README.md"
packages = [
    { include = "tvt_agents" }
]

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^8.3.0"
wsaccel = "^0.6.4"
ws4py = "^0.5.1"
mkdocs = {version = "^1.4.2", extras = ["docs"]}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
behave = "^1.2.6"
black = "^23.1.0"
poetry-dynamic-versioning = "^0.21.3"
pylint = "^2.17.3"

[tool.poetry-dynamic-versioning]
enable=false
vcs="git"
#style="semver"
format="{base}.{distance}-{commit}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
#build-backend = "poetry.core.masonry.api"
build-backend = "poetry_dynamic_versioning.backend"
