[tool.poetry]
name = "tvt_agents"
version = "0.1.0-a797860"
description = "Agents for the TvTrader suite"
authors = ["Zoltan Fabian <zoltan.dzooli.fabian@gmail.com>"]
readme = "README.md"
packages = [
    { include = "tvt_agents" }
]

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.0"
wsaccel = "^0.6.4"
ws4py = "^0.5.1"
click = "^8.1.3"
click-default-group = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
behave = "^1.2.6"
black = {extras = ["d"], version = "^23.7.0"}
mkdocs = {version = "^1.4.2", extras = ["docs"]}
pylint = "^2.17.3"
ruff = "^0.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

