[tool.poetry]
name = "tvt_agents"
version = "0.1.0-a797860"
description = "Distributed agents framework for the TvTrader suite"
authors = ["Zoltan Fabian <zoltan.dzooli.fabian@gmail.com>"]
keywords = ["potery", "messaging", "distributed", "trading", "multithread"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.0"
wsaccel = "^0.6.4"
ws4py = "^0.5.1"
attrs = "^23.1.0"
asyncclick = "^8.1.3.4"
anyio = "^4.0.0"
urllib3 = "^2.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tvtrader_distributor = "tvt_agents.__main__:main"

